# Housing-Perales-final

./: Project Plan.md  README.md  docker-compose.yml  init-db-2.sh  lancer_poetry.txt  mlflow.db
data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 1249  16392  2224  2579  2604  2606  2608  2656  2657  2659  2663  2664  2665  2666  2667  2673  2678  2679  3455  5002  pg_internal.init
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
housing-api/: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
housing-api/alembic/: env.py
housing-api/alembic/versions/: 762fee0b1d5b_create_houses_table.py
housing-api/app/: connect_to_db.py  database.py  db_model.py  main.py  models.py  schemas.py
housing-api/data/base/16384/: 1247  1249  1259  16385  16386  16392  16394  2224  2604  2610  2658  2659  2662  2674  2703  2704  pg_internal.init
housing-api/data/base/5/: pg_internal.init
housing-api/data/global/: 1260  pg_control  pg_internal.init
housing-api/data/pg_stat/: pgstat.stat
housing-kafka/: Dockerfile  requirements.txt
housing-kafka/app/: consumer.py  producer.py
housing-model/: Dockerfile  Dockerfile.mlflow  README.md  analysis.py  curl_ex.txt  docker-compose.yaml  docker-compose.yml  mlflow_proto.py  predict_api.py  pyproject.toml  train_model.py
housing-model/app/: main.py  train.py
housing-model/data/: housing_clean.csv
housing-model/mlruns/0/: meta.yaml
