[project]
name = "housing-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Koy973",email = "kolari3@icloud.com"}
]
readme = "README.md"

# Désactiver totalement le mode package
package-mode = false

requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mlflow (>=2.20.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
